--- a/MiniProjectXML/WebContent/WEB-INF/properties/db.properties
+++ b/MiniProjectXML/WebContent/WEB-INF/properties/db.properties
@@ -1,4 +1,4 @@
-db.classname = oracle.jdbc.OracleDriver
-db.url = jdbc:oracle:thin:@localhost:1521:orcl
-db.username = scott
-db.password = tiger
+db.classname = oracle.jdbc.driver.OracleDriver
+db.url = jdbc:oracle:thin:@202.86.12.198:1521:orcl
+db.username = CMSSBGRID
+db.password = CMSSBGRID
